[IFC] Fix fast/repaint/block-layout-inline-children-float-positioned.html https://bugs.webkit.org/show_bug.cgi?id=254565

Reviewed by Antti Koivisto.

1. floats not only move line boxes but they also shrink them
2. text-align offset logic is based on the line box's width (adjusted by the potentially intrusive floats)

* LayoutTests/fast/inline/out-of-flow-inline-with-float-and-text-align-on-last-line-expected.html: Added.
* LayoutTests/fast/inline/out-of-flow-inline-with-float-and-text-align-on-last-line.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingGeometry.cpp:
(WebCore::Layout::InlineFormattingGeometry::contentLeftAfterLastLine const):

Canonical link: https://commits.webkit.org/262224@main